@@ -49,6 +49,7 @@ class Gems_Upgrades extends \Gems_UpgradesAbstract
         $this->register('Upgrade171to172', 'Upgrade from 1.7.1 to 1.7.2');
         $this->register('Upgrade172to181', 'Upgrade from 1.7.2 to 1.8.1');
         $this->register('Upgrade181to182', 'Upgrade from 1.8.1 to 1.8.2');
+        $this->register('Upgrade182to183', 'Upgrade from 1.8.2 to 1.8.3');
         /**
          * To have the new_project updated to the highest level, update
          *
@@ -289,8 +290,22 @@ class Gems_Upgrades extends \Gems_UpgradesAbstract
      */
     public function Upgrade181to182()
     {
-        // $this->_batch->addTask('Db_CreateNewTables');
+        $this->_batch->addTask('Db_CreateNewTables');
         $this->_batch->addTask('Db_AddPatches', 60);
+
+        $this->_batch->addTask('Echo', $this->_('Make sure to read the changelog as it contains important instructions'));
+        $this->_batch->addTask('Echo', $this->_('Check the Code compatibility report for any issues with project specific code!'));
+
+        return true;
+    }
+
+    /**
+     * To upgrade to 1.8.3
+     */
+    public function Upgrade182to183()
+    {
+        $this->_batch->addTask('Db_CreateNewTables');
+        $this->_batch->addTask('Db_AddPatches', 61);
 
         $this->_batch->addTask('Echo', $this->_('Make sure to read the changelog as it contains important instructions'));
         $this->_batch->addTask('Echo', $this->_('Check the Code compatibility report for any issues with project specific code!'));
